# discogs-browser

./: .gitignore  CLAUDE.md  Makefile  README.md  bootstrap.sh  docker-compose.yml
backend/: Dockerfile  auth_core.py  auth_middleware.py  avatar.py  config.py  crawl_manager.py  crawler.py  db.py  discogs.py  discover.py  ebay_api.py  logging_config.py  main.py  plex.py  pyproject.toml  rate_limit.py  recommendations.py  recommendations_prompt.md  reset_owner.py  scheduler.py  screenshots.py  shopify_catalog.py
backend/crawlers/: amazon.py  bigscarymonstersusa.py  ccmusic.py  centurymedia.py  closedcasketactivities.py  craftrecordings.py  deathwishinc.py  discogs_marketplace.py  ebay.py  ebay_general.py  epitaph.py  equalvision.py  fatherdaughterrecords.py  fatpossum.py  fatwreck.py  fearlessrecords.py  flatspotrecords.py  jadetree.py  killrockstars.py  napalmrecords.py  nuclearblast.py  numerogroup.py  peaceville.py  polyvinylrecords.py  prostheticrecords.py  relapse.py  revhq.py  riserecords.py  runforcoverrecords.py  saddlecreek.py  seasonofmist.py  secretlystore.py  subpopmegamart.py  temporaryresidence.py  triplebrecords.py  twentybuckspin.py
backend/routers/: auth.py  collection.py  crawl.py  crawler_auth.py  discover.py  logs.py  releases.py  screenshots.py  session.py  settings.py  stock.py
backend/scripts/: capture_fixture.py
backend/tests/: conftest.py  test_auth_core.py  test_auth_db.py  test_auth_middleware.py  test_auth_router.py  test_avatar.py  test_avatar_router.py  test_bigscarymonstersusa_crawler.py  test_centurymedia_crawler.py  test_config.py  (+51 more)
(+74 files in other folders)
