[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "discogs-browser"
version = "0.1.0"
requires-python = ">=3.9"
dependencies = [
    "fastapi>=0.111",
    "uvicorn[standard]>=0.29",
    "httpx>=0.27",
    "sse-starlette>=1.8",
    "anthropic>=0.28",
    "playwright>=1.44",
    "playwright-stealth>=1.0.6",
    "apscheduler>=3.10,<4.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.23",
    "pytest-httpx>=0.30",
    "respx>=0.21",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
